// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case page component should render children when passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    />
    FORM
  </div>
</div>
`;

exports[`Case page component should render with default props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    />
  </div>
</div>
`;

exports[`Case page component should render with subTitle when passed in props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        ABC123
      </span>
    </h1>
  </div>
</div>
`;

exports[`Case page component should render with title when passed in props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      MY_TITLE
    </h1>
  </div>
</div>
`;
